--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@
 }
 
 #Logo {
-  height: 200px;
-  width: 200px;
-  background-color: orangered;
+  width: 300px;
   position: absolute;
+  fill: orangered;
 }
